[package]
name = "c3"
version = "1.0.0"
edition = "2021"

[dependencies]
sha1 = "0.10.1"
home = "0.5.9"
ratatui = "0.25.0"
crossterm = "0.27.0"
tui-textarea = "0.4.0"
chrono = "0.4.31"
clap = { version = "4.4.18", features = ["derive", "string"] }

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "debuginfo"
