[package]
name = "c3"
version = "1.7.1"
edition = "2021"

[dependencies]
sha1 = "0.10.1"
home = "0.5.9"
ratatui = "0.25.0"
crossterm = "0.27.0"
tui-textarea = "0.4.0"
chrono = "0.4.31"
clap = { version = "4.4.18", features = ["derive", "string"] }
clap_complete = "4.5.9"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "debuginfo"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench_500k"
harness = false

[target.'cfg(unix)'.dependencies]
nix = {version = "0.29.0", features = ["process", "signal"]}
